# tauri-quasar

./: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  quasar.config.js  quasar.config.ts  tsconfig.json  unocss.config.ts
patches/: quasar-app-extension-ssg@5.1.1.patch
src/: auto-imports.d.ts  components.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: EssentialLink.vue  ExampleComponent.vue  models.ts
src/pages/: index.vue
src/stores/: index.ts
